--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    android:orientation="vertical">
 
     <EditText
         android:id="@+id/school"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:hint="학교 이름" />
 
 
     <EditText
         android:id="@+id/bookname"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:hint="책 이름" />
 
     <Spinner
         android:id="@+id/local"
         android:layout_width="match_parent"
-        android:layout_height="45dp" />
+        android:layout_height="48dp" />
 
     <Button
         android:id="@+id/button"
@@ -43,9 +41,21 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="442dp"
         tools:itemCount="9"
         tools:listitem="@layout/main_rv_item" />
+
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        ads:layout_constraintStart_toStartOf="parent"
+        ads:layout_constraintEnd_toEndOf="parent"
+        ads:layout_constraintBottom_toBottomOf="parent"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-1135151472298637/1439582245">
+    </com.google.android.gms.ads.AdView>
 
 
 </LinearLayout>
