--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
 
     <EditText
         android:id="@+id/school"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:hint="학교 이름" />
-
+        android:hint="학교 이름"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/bookname"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:hint="책 이름" />
+        android:hint="책 이름"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/school" />
 
     <Spinner
         android:id="@+id/local"
         android:layout_width="match_parent"
-        android:layout_height="48dp" />
+        android:layout_height="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bookname" />
 
     <Button
         android:id="@+id/button"
@@ -29,33 +38,41 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="입력"
-        android:textSize="20dp" />
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/local" />
 
     <TextView
+        android:id="@+id/textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="3dp"
+        android:layout_marginBottom="3dp"
+        android:text="                      "
         android:textColor="#ff2424"
-        android:id="@+id/textview"
-        android:text="" />
+        app:layout_constraintBottom_toTopOf="@+id/recyclerv"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerv"
         android:layout_width="match_parent"
-        android:layout_height="442dp"
-        tools:itemCount="9"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/textview"
+        app:layout_constraintBottom_toTopOf="@+id/adView"
+        tools:itemCount="4"
         tools:listitem="@layout/main_rv_item" />
 
-    <com.google.android.gms.ads.AdView
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
+    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        ads:layout_constraintStart_toStartOf="parent"
-        ads:layout_constraintEnd_toEndOf="parent"
-        ads:layout_constraintBottom_toBottomOf="parent"
         ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-1135151472298637/1439582245">
-    </com.google.android.gms.ads.AdView>
+        ads:adUnitId="ca-app-pub-1135151472298637/1439582245"
+        ads:layout_constraintBottom_toBottomOf="parent"
+        ads:layout_constraintEnd_toEndOf="parent"
+        ads:layout_constraintStart_toStartOf="parent" />
 
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
